--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tf2autobot",
-    "version": "4.15.0",
+    "version": "5.0.0-dev.0",
     "description": "Fully automated TF2 trading bot advertising on www.backpack.tf using prices from www.prices.tf, Originally made by Nicklason.",
     "main": "dist/app.js",
     "scripts": {
