--- a/template.env
+++ b/template.env
@@ -11,6 +11,7 @@ BPTF_API_KEY=""
 USERAGENT_HEADER_CUSTOM=""
 
 MPTF_API_KEY=""
+DISCORD_BOT_TOKEN=""
 
 ADMINS=["<your steamid 64>"]
 KEEP=["<steamid of person to keep in friendslist>"]
