🔄 update `!updaterepo` cmd for Android

--- a/template.env
+++ b/template.env
@@ -23,6 +23,8 @@ ENABLE_SOCKET=true
 CUSTOM_PRICER_URL=""
 CUSTOM_PRICER_API_TOKEN=""
 
+RUN_ON_ANDROID=false
+
 SKIP_BPTF_TRADEOFFERURL=true
 SKIP_UPDATE_PROFILE_SETTINGS=true
 
