--- a/template.env
+++ b/template.env
@@ -7,13 +7,12 @@ STEAM_IDENTITY_SECRET=""
 
 BPTF_ACCESS_TOKEN=""
 BPTF_API_KEY=""
+
 USERAGENT_HEADER_CUSTOM=""
-USERAGENT_HEADER_SHOW_VERSION=false
 
 MPTF_API_KEY=""
-DISCORD_BOT_TOKEN=""
 
-ADMINS=[{ "steam": "<your steamid 64>", "discord": null }]
+ADMINS=["<your steamid 64>"]
 KEEP=["<steamid of person to keep in friendslist>"]
 ITEM_STATS_WHITELIST=[]
 GROUPS=["103582791469033930"]
@@ -22,8 +21,6 @@ ALERTS=["trade", "version"]
 ENABLE_SOCKET=true
 CUSTOM_PRICER_URL=""
 CUSTOM_PRICER_API_TOKEN=""
-
-RUN_ON_ANDROID=false
 
 SKIP_BPTF_TRADEOFFERURL=true
 SKIP_UPDATE_PROFILE_SETTINGS=true
