--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
         "@tf2autobot/tf2-schema": "^4.2.6",
         "@tf2autobot/tf2-sku": "^2.0.3",
         "@tf2autobot/tradeoffer-manager": "^2.14.1",
+        "async": "^3.2.4",
         "axios": "^0.27.2",
+        "bluebird": "^3.7.2",
+        "bluebird-global": "^1.0.1",
         "body-parser": "^1.20.0",
         "callback-queue": "^3.0.0",
         "change-case": "^4.1.2",
@@ -70,6 +73,8 @@
     },
     "devDependencies": {
         "@babel/preset-typescript": "^7.18.6",
+        "@types/async": "^3.2.15",
+        "@types/bluebird-global": "^3.5.13",
         "@types/cheerio": "^0.22.31",
         "@types/death": "^1.1.2",
         "@types/express": "^4.17.14",
