--- a/template.env
+++ b/template.env
@@ -12,6 +12,7 @@ USERAGENT_HEADER_SHOW_VERSION=false
 
 MPTF_API_KEY=""
 DISCORD_BOT_TOKEN=""
+STEAMSUPPLY_API_KEY=""
 STEAMAPIS_API_KEY=""
 
 ADMINS=[{ "steam": "<your steamid 64>", "discord": null }]
