--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "isobject": "^4.0.0",
         "js-levenshtein": "^1.1.6",
         "jsonschema": "^1.4.1",
+        "jsonwebtoken": "^9.0.0",
         "module-alias": "^2.2.2",
         "pjson": "^1.0.9",
         "pluralize": "^8.0.0",
@@ -61,8 +62,9 @@
         "reconnecting-websocket": "^4.4.0",
         "retry": "^0.13.1",
         "socket.io-client": "^4.5.4",
+        "steam-session": "^1.1.0",
         "steam-totp": "^2.1.2",
-        "steam-user": "^4.26.1",
+        "steam-user": "^4.28.1",
         "steamid": "^2.0.0",
         "url": "^0.11.0",
         "valid-url": "^1.0.9",
@@ -80,6 +82,7 @@
         "@types/express": "^4.17.15",
         "@types/graceful-fs": "^4.1.6",
         "@types/jest": "^28.1.8",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/node": "^18.11.18",
         "@types/pluralize": "0.0.29",
         "@types/request": "^2.48.8",
