--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tf2autobot",
-    "version": "5.6.0",
+    "version": "5.7.0",
     "description": "Fully automated TF2 trading bot advertising on www.backpack.tf using prices from www.prices.tf, Originally made by Nicklason.",
     "main": "dist/app.js",
     "scripts": {
@@ -22,7 +22,7 @@
     "bugs": {
         "url": "https://github.com/TF2Autobot/tf2autobot/issues"
     },
-    "updaterepo": false,
+    "updaterepo": true,
     "updateMessage": "",
     "homepage": "https://github.com/TF2Autobot/tf2autobot#readme",
     "dependencies": {
