--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "eslint-plugin-jest": "^27.2.1",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-tsdoc": "^0.2.17",
+        "global-agent": "^3.0.0",
         "jest": "^28.1.3",
         "prettier": "^2.8.7",
         "socket.io-mock": "^1.3.2",
