--- a/template.env
+++ b/template.env
@@ -1,3 +1,6 @@
+#This is a template for the file that will be used by NodeJS. Delete "template" for the file to be used by Node.
+#More info on how to set it up here: https://github.com/TF2Autobot/tf2autobot/wiki/Configuring-the-bot
+
 NODE_ENV="production"
 
 STEAM_ACCOUNT_NAME=""
