--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "discord.js": "^14.11.0",
         "dot-prop": "^6.0.1",
         "dotenv": "^16.3.1",
+        "easycopypaste": "github:TryHardDo/EasyCopyPaste",
         "express": "^4.18.2",
         "isobject": "^4.0.0",
         "js-levenshtein": "^1.1.6",
