--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "pretty-ms": "^7.0.1",
         "reconnecting-websocket": "^4.4.0",
         "retry": "^0.13.1",
+        "semver": "^7.5.4",
         "socket.io-client": "^4.7.1",
         "steam-session": "^1.4.1",
         "steam-totp": "^2.1.2",
