--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
         "@types/node": "^20.12.5",
-        "@types/pluralize": "0.0.29",
+        "@types/pluralize": "^0.0.33",
         "@types/request": "^2.48.12",
         "@types/retry": "^0.12.5",
         "@types/semver": "^7.5.8",
