--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "body-parser": "^1.20.3",
         "callback-queue": "^3.0.0",
         "change-case": "^4.1.2",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "^1.0.0",
         "dayjs": "^1.11.13",
         "death": "^1.1.0",
         "discord.js": "^14.14.1",
