--- a/template.env
+++ b/template.env
@@ -15,6 +15,7 @@ MPTF_API_KEY=""
 DISCORD_BOT_TOKEN=""
 STEAMSUPPLY_API_KEY=""
 STEAMAPIS_API_KEY=""
+EXPRESSLOAD_API_KEY=""
 
 ADMINS=[{ "steam": "<your steamid 64>", "discord": null }]
 KEEP=["<steamid of person to keep in friendslist>"]
