feat: add reload functionality for pricelist management
- Implemented `reloadPricelist` method in `Pricelist` class to fetch and set the latest prices.
- Added `reloadCommand` method in `PricelistManagerCommands` to handle the reload command from admins.
- Updated `Commands` class to include a command for reloading the pricelist.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "prelint": "npm run eslint-check",
         "lint": "eslint .",
         "prettier": "prettier --check src/**/* && prettier --check *.json",
-        "eslint-check": "npx eslint-config-prettier src/app.ts"
+        "eslint-check": "npx eslint-config-prettier src/app.ts",
+        "dev": "npm run build && node dist/app.js"
     },
     "repository": {
         "type": "git",
