--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,6 @@
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.detectIndentation": false,
-    "eslint.validate": ["javascript", "typescript", "json"]
+    "eslint.validate": ["javascript", "typescript", "json"],
+    "postman.settings.dotenv-detection-notification-visibility": false
 }
