--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "release": "np --no-cleanup --no-publish",
         "build": "tsc -p .",
         "pretest": "npm run lint",
-        "test": "jest",
+        "test": "vitest",
         "prelint": "npm run eslint-check",
         "lint": "eslint .",
         "prettier": "prettier --check src/**/* && prettier --check *.json",
@@ -79,11 +79,10 @@
         "@types/async": "^3.2.25",
         "@types/bluebird-global": "^3.5.18",
         "@types/death": "^1.1.5",
-        "@types/express": "^4.17.25",
+        "@types/express": "^5.0.6",
         "@types/graceful-fs": "^4.1.9",
-        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
-        "@types/node": "^20.17.50",
+        "@types/node": "^24.10.4",
         "@types/pluralize": "^0.0.33",
         "@types/request": "^2.48.13",
         "@types/retry": "^0.12.5",
@@ -91,20 +90,16 @@
         "@types/valid-url": "^1.0.7",
         "@types/write-file-atomic": "^4.0.3",
         "@types/ws": "^8.18.1",
-        "@typescript-eslint/eslint-plugin": "^8.51.0",
-        "@typescript-eslint/parser": "^8.51.0",
         "eslint": "^9.39.2",
-        "eslint-config-prettier": "^8.10.2",
-        "eslint-plugin-jest": "^29.12.0",
-        "eslint-plugin-prettier": "^4.2.5",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-tsdoc": "^0.5.0",
         "global-agent": "^3.0.0",
-        "jest": "^30.2.0",
-        "prettier": "2.8.8",
+        "prettier": "^3.7.4",
         "socket.io-mock": "^1.3.2",
-        "ts-jest": "^29.4.6",
         "typescript": "^5.9.3",
-        "typescript-eslint": "^8.51.0"
+        "typescript-eslint": "^8.52.0",
+        "vitest": "^4.0.16"
     },
     "private": true,
     "_moduleAliases": {
