--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "sourceMap": false,    // turn on for debug ~ 20 MB
         "forceConsistentCasingInFileNames": true
     },
-    "exclude": ["./node_modules", "**/*.test.ts"],
-    "include": ["./src"]
+    "exclude": ["./node_modules"],
+    "include": ["src/**/*.ts", "./*.m?js"]
 }
